@@ -249,9 +249,8 @@ int CM_PointContents( const vec3_t p, clipHandle_t model ) {
 		brushnum = cm.leafbrushes[leaf->firstLeafBrush+k];
 		b = &cm.brushes[brushnum];
 
-		if ( !BoundsIntersectPoint( b->bounds[0], b->bounds[1], p ) ) {
+		if (!BoundsIntersectPoint( b->bounds[0], b->bounds[1], p ))
 			continue;
-		}
 
 		// see if the point is in the brush
 		for ( i = 0 ; i < b->numsides ; i++ ) {
@@ -477,5 +476,37 @@ int CM_WriteAreaBits (byte *buffer, int area)
 	}
 
 	return bytes;
+}
+
+
+qbool BoundsIntersect( const vec3_t mins, const vec3_t maxs, const vec3_t mins2, const vec3_t maxs2 )
+{
+	if (maxs[0] < mins2[0] - SURFACE_CLIP_EPSILON ||
+		maxs[1] < mins2[1] - SURFACE_CLIP_EPSILON ||
+		maxs[2] < mins2[2] - SURFACE_CLIP_EPSILON ||
+		mins[0] > maxs2[0] + SURFACE_CLIP_EPSILON ||
+		mins[1] > maxs2[1] + SURFACE_CLIP_EPSILON ||
+		mins[2] > maxs2[2] + SURFACE_CLIP_EPSILON)
+	{
+		return qfalse;
+	}
+
+	return qtrue;
+}
+
+
+qbool BoundsIntersectPoint( const vec3_t mins, const vec3_t maxs, const vec3_t point )
+{
+	if (maxs[0] < point[0] - SURFACE_CLIP_EPSILON ||
+		maxs[1] < point[1] - SURFACE_CLIP_EPSILON ||
+		maxs[2] < point[2] - SURFACE_CLIP_EPSILON ||
+		mins[0] > point[0] + SURFACE_CLIP_EPSILON ||
+		mins[1] > point[1] + SURFACE_CLIP_EPSILON ||
+		mins[2] > point[2] + SURFACE_CLIP_EPSILON)
+	{
+		return qfalse;
+	}
+
+	return qtrue;
 }
 
